--- a/app.wxss
+++ b/app.wxss
@@ -1,13 +1,16 @@
-@import 'weui/weui.wxss';
+/*@import 'weui/weui.wxss';*/
 
 .container {
+  font-size: 30rpx;
+  color: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  font-family: PingFang SC, serif;
+  font-family: PingFang SC Medium, sans-serif;
+  -webkit-font-smoothing: antialiased;
   background-color: #fff;
-  min-height: 100%;
+  min-height: 100vh;
 }
 .wxParse-img {
   display: block !important;
