--- a/pages/my/index.wxss
+++ b/pages/my/index.wxss
@@ -29,6 +29,7 @@
   font-size: 36rpx;
 }
 
+
 .my-item{
   display: flex;
   align-items: center;
@@ -59,6 +60,8 @@
   height: 24rpx;
   margin-left: 15rpx;
 }
+
+
 .my-wrapper{
   width: 690rpx;
   margin:22rpx 30rpx 30rpx;
@@ -69,19 +72,19 @@
   justify-content: flex-start;
   box-shadow:0rpx 11rpx 24rpx 0rpx rgba(0, 0, 0, 0.08);
 }
-.my-wrapper.order{
+.order{
   height: 205rpx;
 }
-.my-wrapper.record{
+.record{
   background-color: unset;
   height: 190rpx;
   margin:0 0 30rpx 0;
 }
-.my-wrapper.record .my-wrapper-content{
+.record .my-wrapper-content{
   padding-top: unset;
   justify-content: space-between;
 }
-.my-wrapper.record .my-wrapper-content .item{
+.record .my-wrapper-content .item{
   width: 330rpx;
   height: 190rpx;
   background:rgba(255,255,255,1);
@@ -119,13 +122,22 @@
   align-items: center;
 }
 .my-wrapper-content .item .icon {
-  width: 56rpx;
-  height: 56rpx;
+  width: 50rpx;
+  height: 50rpx;
+}
+.record .my-wrapper-content .item:nth-child(1) .icon {
+  width: 47rpx;
+  height: 42rpx;
+}
+.record .my-wrapper-content .item:nth-child(2) .icon {
+  width: 44rpx;
+  height: 43rpx;
 }
 .my-wrapper-content .item .text {
-  font-family: PingFang SC Medium;
+  font-family: PingFang SC Medium, sans-serif;
   font-size: 26rpx;
-  margin-top: 24rpx;
+  margin-top: 20rpx;
+  line-height: 1.2;
 }
 
 .badge{
@@ -141,11 +153,4 @@
   color: #fff;
   background-color: #ea5255;
   font-size: 27rpx;
-}
-
-.my-list{
-  width:750px;
-  height:177px;
-  background:rgba(255,255,255,1);
-  border:2px solid rgba(240, 240, 240, 1);
 }
