--- a/pages/address-add/index.wxml
+++ b/pages/address-add/index.wxml
@@ -1,41 +1,56 @@
 <view class="container">
-  <view class="identity-select">
+  <view class="identity-select" hidden="{{identityHidden}}">
     <view class="identity-select-content">
       <view class="identity-select-title">选择身份标签</view>
       <view class="identity-select-helper">选择好身份标签，</view>
       <view class="identity-select-helper">有助于更好的填写地址信息</view>
       <view class="card-select">
-        <image src="/images/address/restaurant-card.png"></image>
-        <image src="/images/address/school-card.png"></image>
+        <image src="/images/address/restaurant-card.png" bindtap="selectIdentity" data-type="restaurant"></image>
+        <image src="/images/address/school-card.png" bindtap="selectIdentity" data-type="school"></image>
       </view>
     </view>
   </view>
   <form bindsubmit="bindSave" class="form-content">
-    <view class="form-box">
+    <view class="form-box" wx:if="{{addressData.addressType === 'restaurant'}}">
       <view class="row-wrap">
-        <input name="linkMan" class="input" type="text" placeholder-class="phcolor" maxlength="20"
-               placeholder="收货人" value="{{addressData.linkMan}}{{wxaddress.userName}}"/>
+        <input name="consignee" class="input" type="text" placeholder-class="phcolor" maxlength="25"
+               placeholder="收货人" value="{{addressData.consignee}}"/>
       </view>
       <view class="row-wrap">
         <input name="mobile" class="input" maxlength="11" type="number" placeholder-class="phcolor"
-               placeholder="手机号码" value="{{addressData.mobile}}{{wxaddress.telNumber}}"/>
+               placeholder="手机号码" value="{{addressData.mobile}}"/>
       </view>
       <view class="addr-details">
             <textarea name="address" placeholder="详细地址：县镇+街道+道路门牌号+企业单位地址名称"
-                      placeholder-class="phcolor" value="{{addressData.address}}{{wxaddress.detailInfo}}"/>
+                      placeholder-class="phcolor" value="{{addressData.address}}"/>
+      </view>
+    </view>
+    <view class="form-box school" wx:if="{{addressData.addressType === 'school'}}">
+      <view class="row-wrap">
+        <picker bindchange="bindPickerChange" value="{{schoolIndex}}" range="{{schoolList}}" range-key="schoolName">
+          <view class="picker">{{schoolList[schoolIndex].schoolName}}</view>
+        </picker>
+      </view>
+      <view class="row-wrap" wx:if="{{addressData.addressType === 'school'}}">
+        <input name="classNumber" class="input" type="text" placeholder-class="phcolor" maxlength="16"
+               placeholder="班级号码（例：113班）" value="{{classNumber}}"/>
+      </view>
+      <view class="row-wrap">
+        <input name="mobile" class="input" maxlength="11" type="number" placeholder-class="phcolor"
+               placeholder="手机号码" value="{{addressData.mobile}}"/>
       </view>
     </view>
     <view class="addr-default">
       <view class="addr-default-text">设为默认地址</view>
-      <view class="switch {{isDefault?'is-checked': ''}}" bindtap="changeSwitch">
-        <view class="switch__core {{isDefault?'switch__on': 'switch__off'}}"></view>
-      </view>
+      <switch checked color="#0087ff" bindchange="changeDefaultStatus"/>
     </view>
     <view type="default" class="addr-del" bindtap="deleteAddress" data-id="{{addressData.id}}"
-          wx:if="{{addressData}}">删除地址
+          wx:if="{{id}}">删除地址
     </view>
-    <button class="save-btn" formType="submit">保存</button>
+    <button class="btn save-btn" formType="submit">保存</button>
+    <button class="btn reselect-btn" bindtap="reSelectIdentity">重新选择身份标签</button>
     <!--<button type="default" class="cancel-btn" bindtap="bindCancel">取消</button>-->
   </form>
-  <dialog wx:if="{{tipText}}" type="warning" text="{{tipText}}" bindclose="close"></dialog>
+  <dialog wx:if="{{tipText}}" type="{{dialogType}}" text="{{tipText}}" bindclose="close"
+          bindconfirm="confirmDelete" data-id="{{addressData.id}}"></dialog>
 </view>
