--- a/components/goods-list/index.wxml
+++ b/components/goods-list/index.wxml
@@ -9,14 +9,14 @@
       </view>
       <view class="goods-detail">
         <view class="goods-title">{{item.goodsName}}</view>
-        <view class="goods-rule" hidden="{{!item.rule}}">({{item.rule}})</view>
-        <view class="goods-rule" hidden="{{item.rule}}"></view>
+        <view class="goods-rule" hidden="{{!item.specsList[0].specsStr}}">({{item.specsList[0].specsStr}})</view>
+        <view class="goods-rule" hidden="{{item.specsList[0].specsStr}}"></view>
         <view class="goods-wrap">
           <view class="goods-price">
             <view class="price-label">¥  </view>
-            <view class="price-value">{{item.price}}</view>
+            <view class="price-value">{{item.specsList[0].priceStr}}</view>
             <view class="price-xiegang">/</view>
-            <view class="price-unit">{{item.ruleType}}</view>
+            <view class="price-unit">{{item.specsList[0].unit}}</view>
           </view>
           <view class="goods-select">选规格</view>
         </view>
