--- a/pages/goods-details/index.wxss
+++ b/pages/goods-details/index.wxss
@@ -1,10 +1,7 @@
-@import "/wxParse/wxParse.wxss";
-
 .container {
-  background-color: #F2f2f2;
-  min-height: 100%;
-  padding-bottom: 100rpx;
+  background-color: #f8f8f8;
 }
+
 .swiper-container{
   width: 100%;
   position: relative;
@@ -13,7 +10,6 @@
   width: 100%;
   height:565rpx;
 }
-
 swiper-item image {
   width: 100%;
   display: inline-block;
@@ -40,6 +36,16 @@ swiper-item image {
 .swiper-container .dots .dot.active{
   opacity: .6;
 }
+
+.goods-img-wrap{
+
+}
+.goods-img-wrap .goods-img{
+  width: 750rpx;
+  height: 600rpx;
+}
+
+
 .goods-info{
   display: flex;
   flex-direction: column;
