--- a/pages/goods-details/index.wxss
+++ b/pages/goods-details/index.wxss
@@ -61,7 +61,7 @@ swiper-item image {
 .row{
   display: flex;
   margin-top: 18rpx;
-  padding: 0 30rpx;
+  padding: 0 15rpx;
 }
 .goods-title-and-type{
   align-items: center;
@@ -179,7 +179,7 @@ swiper-item image {
   left: 0;
   bottom: 0;
   width:100%;
-  border-radius: 30rpx;
+  border-radius: 20rpx;
   background-color: #fff;
   z-index: 6;
 }
@@ -189,17 +189,13 @@ swiper-item image {
   align-items: center;
   margin-left: 30rpx;
   padding: 30rpx 0;
-  border-bottom: 1px solid #eee;
 }
 .pop-img-box{
-  width: 120rpx;
-  height: 120rpx;
-  overflow: hidden;
-  margin-right: 26rpx;
+  margin-right: 30rpx;
 }
 .pop-img-box .goods-thumbnail{
-  width: 120rpx;
-  height: 120rpx;
+  width: 164rpx;
+  height: 164rpx;
 }
 .pop-goods-title{
   width: 484rpx;
@@ -223,6 +219,8 @@ swiper-item image {
   align-self: flex-start;
   margin-top: -10rpx;
 }
+
+
 .size-label-box  .label{
   font-size:26rpx;
   color:#000;
@@ -247,46 +245,119 @@ swiper-item image {
   color: #ea5255;
   border: 1px solid #ea5255;
 }
-.buy-num-box{
-   display: flex;
-   justify-content: space-between;
-   padding: 30rpx 30rpx 48rpx 0;
-   margin-left: 30rpx;
-   border-top: 1px solid #eee;
-   margin-top: 30rpx;
-   align-items: center;
+
+
+.pop-goods-title{
+
+}
+.pop-goods-price{
+  font-family: DINAlternate Bold, sans-serif;
+}
+.pop-goods-price .price{
+  font-size: 34rpx;
+}
+.pop-goods-price .row{
+  align-items: baseline;
+  padding: unset;
+  margin-top: 36rpx;
+}
+.pop-goods-guige-select{
+  font-size: 22rpx;
+}
+
+.goods-guige{
+  display: flex;
+  border-bottom: 1rpx solid #eee;
+  margin: 0 30rpx;
+}
+.goods-guige .left-title{
+  color: #000;
+  padding-left: 0;
+}
+.goods-guige .guige-item{
+  font-size: 26rpx;
+  padding: 15rpx 30rpx 15rpx 20rpx;
+  background: #f5f5f5;
+  border-radius: 10rpx;
+  margin-bottom: 20rpx;
+  box-sizing: border-box;
+  border: 1rpx solid #d7d7d7;
+}
+.goods-guige .guige-item.active{
+  background: #ffe7eb;
+  color: #fe1241;
+  border: 1rpx solid #fe103d;
 }
 .num-label{
   font-size:26rpx;
   color:#000000;
 }
-.buy-num-box .num-box{
-     display: flex;
+
+.jiu-can-box{
+  display: flex;
+  justify-content: space-between;
+  padding: 30rpx 30rpx 10rpx 0;
+  margin-left: 30rpx;
+  align-items: center;
 }
-.buy-num-box .num-box .num-jian,
-.buy-num-box .num-box .num-input,
-.buy-num-box .num-box .num-jia{
-  width: 80rpx;
-  height: 64rpx;
-  line-height: 62rpx;
+.jiu-can-box .ci-shu-tag-wrap{
+  display: flex;
+}
+.jiu-can-box .ci-shu-tag{
+  font-size: 26rpx;
+  padding: 15rpx 33rpx;
+  border: 1rpx solid #d7d7d7;
+  background: #f5f5f5;
+  border-radius: 10rpx;
+  margin-left: 20rpx;
+}
+.jiu-can-box .ci-shu-tag.active{
+  color: #ff001c;
+  border: 1rpx solid #fe103d;
+  background: #ffe7eb;
+}
+.jiu-can-box .num-box{
+  display: flex;
+}
+.jiu-can-box .num-box .num-jian,
+.jiu-can-box .num-box .num-input,
+.jiu-can-box .num-box .num-jia{
+  background: #f5f5f5;
+  height: 54rpx;
+  line-height: 54rpx;
   text-align: center;
   border: 1px solid #eee;
+  border-radius: 6rpx 0 0 6rpx;
 }
-.buy-num-box .num-box .num-input{
-  font-size: 28rpx;
+.jiu-can-box .num-box .num-jian,
+.jiu-can-box .num-box .num-jia{
+  font-size: 36rpx;
+  width: 54rpx;
+  color: #9f9f9f;
 }
-.buy-num-box .num-box .num-input input{
+.jiu-can-box .num-box .num-input{
+  font-family: PingFang SC Bold, sans-serif;
+  margin: 0 5rpx;
+  width: 92rpx;
+  font-size: 26rpx;
+  color: #000;
+}
+.jiu-can-box .num-box .num-input input{
   height: 100%;
 }
-.popup-join-btn{
-  width: 100%;
-  height: 89rpx;
-  text-align: center;
-  line-height: 89rpx;
-  font-size:34rpx;
-  color:#ffffff;
-  background-color: #ea5255;
-}
-.buy-num-box .num-box .hui{
+.jiu-can-box .num-box .hui{
   background-color: #f5f5f9;
+}
+.popup-join-btn{
+  font-family: PingFang SC Bold, sans-serif;
+  width: 690rpx;
+  height: 89rpx;
+  line-height: 89rpx;
+  margin: auto;
+  text-align: center;
+  background: linear-gradient(#fe1446, #ff001c);
+  font-size:28rpx;
+  color:#ffffff;
+  border-radius: 44.5rpx;
+  margin-bottom: 10rpx;
 }
