商品详情加入购物车

--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -74,7 +74,8 @@
               <view class="price-unit">/{{goodsDetail.pack?'套':'件'}}</view>
             </view>
           </view>
-          <view class="pop-goods-guige-select">(已选择规格A{{}})</view>
+          <view class="pop-goods-guige-select"
+                wx:if="{{goodsDetail.useType!=='幼儿园餐具'}}">(已选择：{{selectSpecLabel}})</view>
         </view>
         <view class="pop-goods-close" bindtap="closePopupTap"></view>
       </view>
@@ -83,7 +84,7 @@
         <view class="right-content">
           <view class="guige-item {{specSelected===item.specsId?'active': ''}}"
                 wx:for="{{goodsDetail.specsList}}" wx:key="item.specsId"
-                data-id="{{item.specsId}}" bindtap="selectSpec">
+                data-id="{{item.specsId}}" data-specsname="{{item.specsName}}" bindtap="selectSpec">
             {{item.specsName}} : {{item.specsStr}}
           </view>
         </view>
@@ -91,8 +92,8 @@
       <view class="jiu-can-box jiu-can-ci-shu">
         <view class="num-label">就餐次数</view>
         <view class="ci-shu-tag-wrap">
-          <view class="ci-shu-tag {{cishuSelected===index?'active':''}}" wx:for="{{ciShuTag}}" wx:key="item"
-                bindtap="selectCiShuTag" data-num="{{index}}">{{item}}</view>
+          <view class="ci-shu-tag {{cishuSelected===index+1?'active':''}}" wx:for="{{ciShuTag}}" wx:key="item"
+                bindtap="selectCiShuTag" data-num="{{index+1}}">{{item}}</view>
         </view>
       </view>
       <view class="jiu-can-box jiu-can-ren-shu">
@@ -100,7 +101,7 @@
         <view class="num-box">
           <view class="num-jian {{renshu == buyNumMin ? 'hui': ''}}" bindtap="numJianTap" data-type="renshu">-</view>
           <view class="num-input">
-            <input type="number" value="{{renshu}}" disabled/>
+            <input type="number" value="{{renshu}}"/>
           </view>
           <view class="num-jia {{renshu== buyNumMax ? 'hui': ''}}" bindtap="numJiaTap" data-type="renshu">+</view>
         </view>
@@ -108,9 +109,9 @@
       <view class="jiu-can-box jiu-can-tian-shu">
         <view class="num-label">就餐天数</view>
         <view class="num-box">
-          <view class="num-jian {{tianshu === 0 ? 'hui': ''}}" bindtap="numJianTap" data-type="tianshu">-</view>
+          <view class="num-jian {{tianshu === buyNumMin ? 'hui': ''}}" bindtap="numJianTap" data-type="tianshu">-</view>
           <view class="num-input">
-            <input type="number" value="{{tianshu}}" disabled/>
+            <input type="number" value="{{tianshu}}"/>
           </view>
           <view class="num-jia {{tianshu== buyNumMax ? 'hui': ''}}" bindtap="numJiaTap" data-type="tianshu">+</view>
         </view>
@@ -118,4 +119,5 @@
       <view class="popup-join-btn" bindtap="popupOk">确定</view>
     </view>
   </view>
+  <dialog wx:if="{{tipText}}" type="{{dialogType}}" text="{{tipText}}" bindclose="close"></dialog>
 </view>
